force-app/main/default/objects/Lead/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account_Type__c</field>
            <operation>equals</operation>
            <valueField>Account.Type</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads and Referrals (Account)</relationshipLabel>
    <relationshipName>Leads_and_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>