force-app/main/default/objects/Lead/fields/Account_Pipeline_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Pipeline_Status__c</fullName>
    <label>Account Pipeline Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Pipeline_Status</valueSetName>
    </valueSet>
</CustomField>