force-app/main/default/objects/Lead/fields/Activity_BRO__c.field-meta.xml
<CustomField>
    <fullName>Activity_BRO__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Direct Selling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>