force-app/main/default/objects/Lead/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Search Address</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Leads and Referrals (Address)</relationshipLabel>
    <relationshipName>Leads_and_Referrals4</relationshipName>
    <type>Lookup</type>
</CustomField>