force-app/main/default/objects/Lead/fields/Address_Selected__c.field-meta.xml
<CustomField>
    <fullName>Address_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Selected</label>
    <type>Checkbox</type>
</CustomField>