force-app/main/default/objects/Lead/fields/Akta_Jual_Beli_Date__c.field-meta.xml
<CustomField>
    <fullName>Akta_Jual_Beli_Date__c</fullName>
    <label>Akta Jual Beli Date</label>
    <type>Date</type>
</CustomField>