force-app/main/default/objects/Lead/fields/Asset_Address__c.field-meta.xml
<CustomField>
    <fullName>Asset_Address__c</fullName>
    <label>Asset Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>