force-app/main/default/objects/Lead/fields/Asset_Latitude_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Asset_Latitude_Longitude__c</fullName>
    <label>Asset Latitude/Longitude</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>