force-app/main/default/objects/Lead/fields/Asset_Map__c.field-meta.xml
<CustomField>
    <fullName>Asset_Map__c</fullName>
    <formula>IF(ISBLANK(TEXT(Asset_Latitude_Longitude__Latitude__s)) || ISBLANK(TEXT(Asset_Latitude_Longitude__Longitude__s)), &quot;No location available&quot;, HYPERLINK (&quot;https://www.google.com/maps?q=&quot; &amp; TEXT(Asset_Latitude_Longitude__Latitude__s) &amp; &quot;,&quot; &amp; TEXT(Asset_Latitude_Longitude__Longitude__s), &quot;View Asset Address on Google Maps&quot;))</formula>
    <label>Asset Map</label>
    <type>Text</type>
</CustomField>