force-app/main/default/objects/Lead/fields/Asset_Provinces__c.field-meta.xml
<CustomField>
    <fullName>Asset_Provinces__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Province</label>
    <referenceTo>Province_Master_Data__c</referenceTo>
    <relationshipLabel>Leads (Asset Province)</relationshipLabel>
    <relationshipName>Leads_Asset</relationshipName>
    <type>Lookup</type>
</CustomField>