force-app/main/default/objects/Lead/fields/Asset_RT_RW__c.field-meta.xml
<CustomField>
    <fullName>Asset_RT_RW__c</fullName>
    <label>Asset RT/RW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>