force-app/main/default/objects/Lead/fields/Asset_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Zip_Code__c</fullName>
    <label>Asset Zip Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15147</fullName>
            </value>
            <value>
                <fullName>15148</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>