force-app/main/default/objects/Lead/fields/Business_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Business_Segmentation__c</fullName>
    <label>Business Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Segmentation</valueSetName>
    </valueSet>
</CustomField>