force-app/main/default/objects/Lead/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.RecordType.Name</field>
            <operation>equals</operation>
            <value>City</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Leads and Referrals (Kabupaten)</relationshipLabel>
    <relationshipName>Leads_and_Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>