force-app/main/default/objects/Lead/fields/Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone__c</fullName>
    <label>Company Phone</label>
    <type>Phone</type>
</CustomField>