force-app/main/default/objects/Lead/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Country</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.RecordTypeId</field>
            <operation>equals</operation>
            <value>Country</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Leads and Referrals (Country)</relationshipLabel>
    <relationshipName>Leads_and_Referrals5</relationshipName>
    <type>Lookup</type>
</CustomField>