force-app/main/default/objects/Lead/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
                <default>true</default>
                <label>Personal</label>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Badan Usaha Milik Negara</fullName>
                <isActive>false</isActive>
                <label>Badan Usaha Milik Negara</label>
            </value>
            <value>
                <fullName>CV</fullName>
                <isActive>false</isActive>
                <label>CV</label>
            </value>
            <value>
                <fullName>Firma</fullName>
                <isActive>false</isActive>
                <label>Firma</label>
            </value>
            <value>
                <fullName>Koperasi</fullName>
                <isActive>false</isActive>
                <label>Koperasi</label>
            </value>
            <value>
                <fullName>NV</fullName>
                <isActive>false</isActive>
                <label>NV</label>
            </value>
            <value>
                <fullName>Perseroan Terbatas</fullName>
                <isActive>false</isActive>
                <label>Perseroan Terbatas</label>
            </value>
            <value>
                <fullName>Perusahaan Dagang</fullName>
                <isActive>false</isActive>
                <label>Perusahaan Dagang</label>
            </value>
            <value>
                <fullName>Perusahaan Tbk</fullName>
                <isActive>false</isActive>
                <label>Perusahaan Tbk</label>
            </value>
            <value>
                <fullName>Yayasan</fullName>
                <isActive>false</isActive>
                <label>Yayasan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>