force-app/main/default/objects/Lead/fields/Divorce_Date__c.field-meta.xml
<CustomField>
    <fullName>Divorce_Date__c</fullName>
    <label>Divorce Date</label>
    <type>Date</type>
</CustomField>