force-app/main/default/objects/Lead/fields/Domicile_Address__c.field-meta.xml
<CustomField>
    <fullName>Domicile_Address__c</fullName>
    <label>Domicile Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>