force-app/main/default/objects/Lead/fields/Domicile_City_Kabupatens__c.field-meta.xml
<CustomField>
    <fullName>Domicile_City_Kabupatens__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domicile City/Kabupaten</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Domicile_Provinces__c</field>
            <operation>equals</operation>
            <valueField>City_Master_Data__c.Province_Id__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>City_Master_Data__c</referenceTo>
    <relationshipLabel>Leads (Domicile City/Kabupaten)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>