force-app/main/default/objects/Lead/fields/Domicile_Latitude_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Domicile_Latitude_Longitude__c</fullName>
    <label>Domicile Latitude/Longitude</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>