force-app/main/default/objects/Lead/fields/Domicile_Province__c.field-meta.xml
<CustomField>
    <fullName>Domicile_Province__c</fullName>
    <label>Domicile Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banten</fullName>
            </value>
            <value>
                <fullName>Jakarta</fullName>
            </value>
            <value>
                <fullName>Jawa Barat</fullName>
            </value>
            <value>
                <fullName>Jawa Tengah</fullName>
            </value>
            <value>
                <fullName>Jawa Timur</fullName>
            </value>
            <value>
                <fullName>Sumatera Utara</fullName>
            </value>
            <value>
                <fullName>Sumatera Selatan</fullName>
            </value>
            <value>
                <fullName>Sumatera Barat</fullName>
            </value>
            <value>
                <fullName>Lampung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>