force-app/main/default/objects/Lead/fields/Domicile_Provinces__c.field-meta.xml
<CustomField>
    <fullName>Domicile_Provinces__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domicile Province</label>
    <referenceTo>Province_Master_Data__c</referenceTo>
    <relationshipLabel>Leads (Domicile Province)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>