force-app/main/default/objects/Lead/fields/DP__c.field-meta.xml
<CustomField>
    <fullName>DP__c</fullName>
    <label>DP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>