force-app/main/default/objects/Lead/fields/Federated_Fullname__c.field-meta.xml
<CustomField>
    <fullName>Federated_Fullname__c</fullName>
    <formula>TRIM( Federated_Owner__r.FirstName &amp; &quot; &quot; &amp; Federated_Owner__r.LastName )</formula>
    <label>Federated Fullname</label>
    <type>Text</type>
</CustomField>