force-app/main/default/objects/Lead/fields/Geo_Tag__c.field-meta.xml
<CustomField>
    <fullName>Geo_Tag__c</fullName>
    <label>Geo Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>