force-app/main/default/objects/Lead/fields/Is_Take_Over__c.field-meta.xml
<CustomField>
    <fullName>Is_Take_Over__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Take Over</label>
    <type>Checkbox</type>
</CustomField>