force-app/main/default/objects/Lead/fields/Job_Address__c.field-meta.xml
<CustomField>
    <fullName>Job_Address__c</fullName>
    <label>Job Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>