force-app/main/default/objects/Lead/fields/Job_Kecamatan__c.field-meta.xml
<CustomField>
    <fullName>Job_Kecamatan__c</fullName>
    <label>Job Kecamatan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cipondoh</fullName>
            </value>
            <value>
                <fullName>Ciledug</fullName>
            </value>
            <value>
                <fullName>Karangtengah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>