force-app/main/default/objects/Lead/fields/Job_Kelurahan__c.field-meta.xml
<CustomField>
    <fullName>Job_Kelurahan__c</fullName>
    <label>Job Kelurahan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ketapang</fullName>
            </value>
            <value>
                <fullName>Cipondoh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>