force-app/main/default/objects/Lead/fields/Job_Latitude_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Job_Latitude_Longitude__c</fullName>
    <label>Job Latitude/Longitude</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>