force-app/main/default/objects/Lead/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <label>Job Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>