force-app/main/default/objects/Lead/fields/Job_Position__c.field-meta.xml
<CustomField>
    <fullName>Job_Position__c</fullName>
    <label>Job Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manajer</fullName>
            </value>
            <value>
                <fullName>Kepala Bagian</fullName>
            </value>
            <value>
                <fullName>Staff Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>