force-app/main/default/objects/Lead/fields/Job_Provinces__c.field-meta.xml
<CustomField>
    <fullName>Job_Provinces__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Province</label>
    <referenceTo>Province_Master_Data__c</referenceTo>
    <relationshipLabel>Leads (Job Province)</relationshipLabel>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>