force-app/main/default/objects/Lead/fields/Job_RT_RW__c.field-meta.xml
<CustomField>
    <fullName>Job_RT_RW__c</fullName>
    <label>Job RT/RW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>