force-app/main/default/objects/Lead/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Karyawan Tetap</fullName>
            </value>
            <value>
                <fullName>Karyawan Kontrak</fullName>
            </value>
            <value>
                <fullName>Freelance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>