force-app/main/default/objects/Lead/fields/Lead_Referral_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Referral_Email__c</fullName>
    <label>Lead Referral Email</label>
    <type>Email</type>
</CustomField>