force-app/main/default/objects/Lead/fields/Lead_Referral_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lead_Referral_Phone__c</fullName>
    <label>Lead Referral Phone</label>
    <type>Phone</type>
</CustomField>