force-app/main/default/objects/Lead/fields/Legal_Address__c.field-meta.xml
<CustomField>
    <fullName>Legal_Address__c</fullName>
    <label>Legal Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>