force-app/main/default/objects/Lead/fields/Legal_City_Kabupaten__c.field-meta.xml
<CustomField>
    <fullName>Legal_City_Kabupaten__c</fullName>
    <label>Legal City/Kabupaten</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tangerang Kota</fullName>
            </value>
            <value>
                <fullName>Tangerang Selatan</fullName>
            </value>
            <value>
                <fullName>Kabupaten Tangerang</fullName>
            </value>
            <value>
                <fullName>Bogor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>