force-app/main/default/objects/Lead/fields/Legal_City_Kabupatens__c.field-meta.xml
<CustomField>
    <fullName>Legal_City_Kabupatens__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal City/Kabupaten</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Legal_Provinces__c</field>
            <operation>equals</operation>
            <valueField>City_Master_Data__c.Province_Id__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>City_Master_Data__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads_City_Kabupaten</relationshipName>
    <type>Lookup</type>
</CustomField>