force-app/main/default/objects/Lead/fields/Legal_Kecamatan__c.field-meta.xml
<CustomField>
    <fullName>Legal_Kecamatan__c</fullName>
    <label>Legal Kecamatan</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cipondoh</fullName>
            </value>
            <value>
                <fullName>Ciledug</fullName>
            </value>
            <value>
                <fullName>Karangtengah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>