force-app/main/default/objects/Lead/fields/Legal_Latitude_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Legal_Latitude_Longitude__c</fullName>
    <label>Legal Latitude/Longitude</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>