force-app/main/default/objects/Lead/fields/Legal_Map__c.field-meta.xml
<CustomField>
    <fullName>Legal_Map__c</fullName>
    <formula>IF(ISBLANK(TEXT(Legal_Latitude_Longitude__Latitude__s)) || ISBLANK(TEXT(Legal_Latitude_Longitude__Longitude__s)), &quot;No location available&quot;, HYPERLINK (&quot;https://www.google.com/maps?q=&quot; &amp; TEXT(Legal_Latitude_Longitude__Latitude__s) &amp; &quot;,&quot; &amp; TEXT(Legal_Latitude_Longitude__Longitude__s), &quot;View Legal Address on Google Maps&quot;))</formula>
    <label>Legal Map</label>
    <type>Text</type>
</CustomField>