force-app/main/default/objects/Lead/fields/Legal_RT_RW__c.field-meta.xml
<CustomField>
    <fullName>Legal_RT_RW__c</fullName>
    <label>Legal RT/RW</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>