force-app/main/default/objects/Lead/fields/Lembaga_LJKs__c.field-meta.xml
<CustomField>
    <fullName>Lembaga_LJKs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lembaga LJK New</label>
    <referenceTo>Master_Bank__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>