force-app/main/default/objects/Lead/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , TEXT(Salutation) &amp; &quot; &quot; &amp; FirstName &amp; &quot; &quot; &amp; LastName , &apos;_self&apos;)</formula>
    <label>Link</label>
    <type>Text</type>
</CustomField>