force-app/main/default/objects/Lead/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kawin</fullName>
            </value>
            <value>
                <fullName>Tidak Kawin</fullName>
            </value>
            <value>
                <fullName>Cerai Hidup</fullName>
            </value>
            <value>
                <fullName>Cerai Mati</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>