force-app/main/default/objects/Lead/fields/Nomor_Objek_Pajak__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Objek_Pajak__c</fullName>
    <label>Nomor Objek Pajak</label>
    <length>255</length>
    <type>Text</type>
</CustomField>